# efficiency-convexity

./: README.md  pyproject.toml
src/eff_conv/: convexity.py  language.py  optimization.py  spacial.py  structure.py  suboptimizer.py
src/eff_conv/ib/: language.py  optimization.py  structure.py  suboptimizer.py  utils.py
src/examples/colors/: README.md  requirements.txt
src/examples/colors/data/: .gitignore  download.sh
src/examples/colors/data/minimized/: color_model.csv  model-cpdm.csv  model-cpdm_adj.csv  model-cpdm_convex.csv  model-cpdm_dual.csv  model-cpdm_split.csv  model-cpum.csv  model-cpum_dual.csv  model-cpum_split.csv  model-manhattan_5_5.csv  model-npdm.csv  model-npdm_adj.csv  model-npdm_dual.csv  model-npdm_shift.csv  model-npum.csv  model-npum_dual.csv
src/examples/colors/exp1/: check_diff.py  gen_whisker_plots.py  generate_color_correlation.py  generate_color_model.py  generate_color_plot.py
src/examples/colors/exp2_3/: calculate_correlation.py  generate_models.py  generate_plots.py
src/examples/colors/exp2_3/models/: base.py  special.py  utils.py  variants.py
src/examples/colors/utils/: correlation.py  migrate.py  minimize_models.py  ols_model.py
src/examples/colors/visualization/: cloud.py  gen_wcs_grid.py
src/tests/: test_convexity.py  test_ib.py  test_optimization.py
